--- a/eks/mi-aplicacion/mi-aplicacion/CloudFormation/api/buildspec.yml
+++ b/eks/mi-aplicacion/mi-aplicacion/CloudFormation/api/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   install:
     runtime-versions:
       kubectl: latest  # Install the latest version of kubectl
-  pre-build:
+  pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --no-include-email --region ${AWS::Region})
@@ -11,9 +11,9 @@ phases:
     commands:
       - echo Showing folder structure
       - ls -l
-      - aws cloudformation package --template-file eks/mi-aplicacion/mi-aplicacion/Cloudformation/api/pipeline.yml --s3-bucket $S3Bucket --output-template-file packaged-template.yml
+      - aws cloudformation package --template-file eks/mi-aplicacion/mi-aplicacion/CloudFormation/api/pipeline.yml --s3-bucket $S3Bucket --output-template-file packaged-template.yml
       - echo Building Docker image...
-      - docker build -t mi-aplicacion -f mi-aplicacion/Dockerfile .
+      - docker build -t mi-aplicacion -f mi-aplicacion/mi-aplicacion/Dockerfile .
       - docker tag mi-aplicacion:latest ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/mi-aplicacion-repo-${ENVIRONMENT_TYPE}:latest
       - docker save -o miaplicacion.tar miaplicacion
   post_build:
