remove docker runtime from buildspec

--- a/eks/mi-aplicacion/mi-aplicacion/CloudFormation/api/buildspec.yml
+++ b/eks/mi-aplicacion/mi-aplicacion/CloudFormation/api/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   install:
     runtime-versions:
       # kubectl: latest  # Install the latest version of kubectl
-      docker: latest
+      #docker: latest
       dotnet: latest
   pre_build:
     commands:
