change pipeline policies

--- a/eks/mi-aplicacion/mi-aplicacion/CloudFormation/pipeline/pipeline.yml
+++ b/eks/mi-aplicacion/mi-aplicacion/CloudFormation/pipeline/pipeline.yml
@@ -71,7 +71,13 @@ Resources:
                   - "logs:PutLogEvents"
                   - "cloudformation:*"
                   - "kms:*"
-                  - "ecr:*"
+                  - "codedeploy:*"
+                  - "ecr:BatchCheckLayerAvailability"
+                  - "ecr:CompleteLayerUpload"
+                  - "ecr:GetAuthorizationToken"
+                  - "ecr:InitiateLayerUpload"
+                  - "ecr:PutImage"
+                  - "ecr:UploadLayerPart"
                   - "eks:*"
                   - "s3:*"
                 Resource:
