--- a/eks/mi-aplicacion/mi-aplicacion/CloudFormation/pipeline/pipeline.yml
+++ b/eks/mi-aplicacion/mi-aplicacion/CloudFormation/pipeline/pipeline.yml
@@ -216,7 +216,10 @@ Resources:
           - Name: ENVIRONMENT_TYPE
             Type: PLAINTEXT
             Value: !Ref EnvironmentType
-  
+          - Name: AWS_ACCOUNT_ID
+            Type: PLAINTEXT
+            Value: !Ref AWS::AccountId
+
   CodePipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
