--- a/eks/mi-aplicacion/mi-aplicacion/Aws/CloudFormation/api/buildspec.yml
+++ b/eks/mi-aplicacion/mi-aplicacion/Aws/CloudFormation/api/buildspec.yml
@@ -27,7 +27,7 @@ phases:
       - EKS_ROLE_ARN=arn:aws:iam::${AWS_ACCOUNT_ID}:role/${APPLICATION_NAME}-eks-role-${ENVIRONMENT_TYPE}
       - echo roleARNtoAssume=$EKS_ROLE_ARN
       #- echo Assuming role
-      - aws sts assume-role --role-arn $EKS_ROLE_ARN --role-session-name test
+      - aws sts assume-role --role-arn $EKS_ROLE_ARN --role-session-name codebuildEksDeploy
       #- echo check caller identity    
       #- aws sts get-caller-identity
       - aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name $AWS_CLUSTER_NAME --role-arn $EKS_ROLE_ARN
